debug hash issues

--- a/state-view.html
+++ b/state-view.html
@@ -1,5 +1,5 @@
 <div>
-	<b>{{stateCtrl.params.countryCode}}</b>
+	<b>CountryCode: {{stateCtrl.params.countryCode}}</b>
 	<ul ng-show="stateCtrl.states.length > 0">
 		<!--					repeat states-->
 		<li ng-repeat="s in stateCtrl.states">
